# kyria

./: .gitignore  build.sh  build_left.sh  generate_includes.py  layers.json  src
app/: .clangd  CMakeLists.txt  Kconfig  compile_commands.json
backups/: 2024-02-17T01:15:50.uf2  2024-02-17T01:15:53.uf2  left_21_06_23.uf2  right.uf2  right_21_06_23.uf2
config/: 34layout.keymap  info.json  keymap.json  kyria_rev2.conf  kyria_rev2.keymap  kyria_rev3.conf  kyria_rev3.keymap  kyria_rev3_left.conf  kyria_rev3_right.conf  minimal.keymap  miryoku.keymap  west.yml
config/boards/shields/kyria/src/display/: CMakeLists.txt  custom_status_screen.c  status_screen_central.c  status_screen_peripheral.c  status_screen_test.c
config/boards/shields/kyria/src/display/icons/: CMakeLists.txt  kyria_logo.c
config/boards/shields/kyria/src/display/widgets/: Kconfig  battery_status.c  bongo_cat.c  bongo_cat.h  debug_output.c  layer_menu.c  layer_status.c  menu.c  output_status.c  peripheral_status.c
config/boards/shields/kyria/src/display/widgets/headers/: battery_status.h  bongo_cat.h  debug_output.h  layer_menu.h  layer_status.h  menu.h  output_status.h
config_/: 34layout.keymap  info.json  keymap.json  kyria_rev3.conf  kyria_rev3.keymap  test.keymap
config_mine/: info.json  kyria_rev3_left.conf_
includes/: behaviors.dtsi  combos.dtsi  defines.dtsi  finger_positions.dtsi  finger_positions_old.dtsi  functions.dtsi  includes.dtsi  layer_defines.dtsi  layer_includes.dtsi  layers.json  macros.dtsi  main.dts  mod_morphs.dtsi  tap_dances.dtsi
kicad/: kicad-B_Mask.gbr  kicad-F_Cu.gbr  (+6 more)
(+285 files in other folders)
